Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1122,6 +1122,7 @@
     "payment-method": "Forma de pago",
     "payment-methods": "Formas de pago",
     "payments": "Pagos",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recargo",
@@ -1692,6 +1693,6 @@
     "you-should-change-passwd": "Debería cambiar su contraseña",
     "your": "Suyo",
     "zip-code": "Código Postal",
-    "zip-codes": "PSČ",
+    "zip-codes": "Poštovní směrovací čísla",
     "zip-error-wrong-structure": "La estructura del zip es incorrecta. Debe contener la carpeta del plugin y solamente un plugin."
 }
