--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -606,7 +606,7 @@
     "field-required": "Erforderliches Feld: %field%",
     "fields": "Felder",
     "file": "archivieren",
-    "file-audio-codec-not-accepted": "Fehler beim Senden der Audiodatei %fileName%, da der Codec %codec% nicht zulässig ist. Zulässige Codecs sind: %supported%",
+    "file-audio-codec-not-accepted": "Fehler beim Senden der Audiodatei %fileName%, da der Codec %codec% nicht erlaubt ist. Zulässige Codecs sind: %supported%",
     "file-extension-not-accepted": "Fehler beim Senden der Datei %fileName%, da ihre Erweiterung nicht erlaubt ist. Erlaubte Erweiterungen sind: %accepted%",
     "file-name": "Dateiname",
     "file-not-exists": "Datei existiert nicht: %fileName%",
@@ -940,7 +940,7 @@
     "maximum-amount-without-cifnif": "M",
     "maximum-stock": "Höchstbestand",
     "may": "Mai",
-    "media-whatsapp-not-upload": "Fehler beim Hochladen der Mediendatei auf den WhatsApp-Server: %file%",
+    "media-whatsapp-not-upload": "Fehler beim Hochladen der Medien datei auf den WhatsApp-Server: %file%",
     "mega-search": "MegaSuchmaschine",
     "memcache": "Memcache 0",
     "memcache-clear": "Memcache klärte sich.",
@@ -1122,6 +1122,7 @@
     "payment-method": "Bezahlverfahren",
     "payment-methods": "Zahlungsarten",
     "payments": "Zahlungen",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Zuschlag",
@@ -1342,7 +1343,7 @@
     "second-trimester": "Zweites Trimester",
     "select": "Auswählen",
     "select-all": "Alle auswählen",
-    "select-content-for": "Wählen Sie Inhalt für %content% aus",
+    "select-content-for": "Wählen Sie Inhalt für %content% aus.",
     "select-none": "Keine Auswahl treffen",
     "select-plugin-zip-file": "Wählen Sie die Plugin-Zip-Datei:",
     "select-user": "Benutzer auswählen",
