--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1122,6 +1122,7 @@
     "payment-method": "Payment method",
     "payment-methods": "Payment methods",
     "payments": "Payments",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "Surcharge rate",
