--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -1122,6 +1122,7 @@
     "payment-method": "Forma de pago",
     "payment-methods": "Formas de pago",
     "payments": "Pagos",
+    "paypal": "PayPal",
     "pct": "% PCT",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recargo.",
