--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -606,7 +606,7 @@
     "field-required": "Beharrezko eremua: %field%",
     "fields": "Eremuak",
     "file": "Artxiboa",
-    "file-audio-codec-not-accepted": "Errore bat gertatu da %fileName% audio-fitxategia bidaltzean, %codec% kodeak ez baitu onartzen. Onartutako kodeak hauek dira: %supported%",
+    "file-audio-codec-not-accepted": "Errorea gertatu da %fileName% audio-fitxategia bidaltzean, %codec% kodeak ez baitu onartzen. Onartutako kodeak hauek dira: %supported%",
     "file-extension-not-accepted": "Errorea fitxategia bidaltzerakoan %fileName%-en extensioa ez dela onartua. Onartutako extensioak hauek dira: %accepted%",
     "file-name": "Artxiboaren izena",
     "file-not-exists": "%fileName% artxiboa ez da existitzen",
@@ -1122,6 +1122,7 @@
     "payment-method": "Ordainketa modua",
     "payment-methods": "Ordainketa moduak",
     "payments": "Ordainketak",
+    "paypal": "PayPal",
     "pct": "%",
     "pct-irpf": "PFEZ %",
     "pct-surcharge": "Gainkargu %",
