--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1122,6 +1122,7 @@
     "payment-method": "Mode de paiement",
     "payment-methods": "Méthodes de payement",
     "payments": "Paiements",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% impôt sur le revenu",
     "pct-surcharge": "% Supplément",
