--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1122,6 +1122,7 @@
     "payment-method": "Método de pagamento",
     "payment-methods": "Métodos de pagamento",
     "payments": "Pagos",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recargo",
