--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1122,6 +1122,7 @@
     "payment-method": "Metodo di pagamento",
     "payment-methods": "Modalità di pagamento",
     "payments": "Pagamenti",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Sovrapprezzo",
@@ -1619,7 +1620,7 @@
     "valid-for-day": "Valido per un giorno",
     "validate": "Convalida",
     "validate-iban": "Validare IBAN",
-    "validate-whatsapp-not-connection": "Errore nella validazione del numero di WhatsApp, impossibile stabilire una connessione con il server di WhatsApp",
+    "validate-whatsapp-not-connection": "Errore nella validazione del numero di WhatsApp, impossibile stabilire una connessione con il server WhatsApp",
     "valuation-type": "Tipo di valutazione",
     "value": "Valore",
     "value-x": "valore X",
