--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -695,7 +695,7 @@
     "generated-supplier-orders": "Wygenerowano %quantity% zamówień od dostawców.",
     "global-dto": "Globalne Dto",
     "global-dto-2": "Dto. global 2",
-    "graphics": "Grafika",
+    "graphics": "Grafiki",
     "greater-than": "Większy niż",
     "grid-help": "Control + Enter do wstawienia nowej linii. Możesz przesuwać lub usuwać linie klikając numer linii.",
     "group": "Grupa",
@@ -1085,7 +1085,7 @@
     "origin": "Pochodzenie",
     "origin-warehouse": "Magazyn źródłowy",
     "original": "Oryginał",
-    "original-file": "Plik oryginalny",
+    "original-file": "Orignalny plik",
     "other-data": "Inne dane",
     "others-filters": "Inne filtry",
     "out-of-stock": "Brak towaru",
@@ -1122,6 +1122,7 @@
     "payment-method": "Metoda płatności",
     "payment-methods": "Formy płatności",
     "payments": "Płatności",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% nadpłaty",
@@ -1138,7 +1139,7 @@
     "percentage-vat": "% Podatek",
     "period": "Okres",
     "personalized": "Personalizado",
-    "pgsql-endpoint": "Endpoint PostgreSQL",
+    "pgsql-endpoint": "Interfejs PostgreSQL",
     "pgsql-ssl-mode": "Tryb SSL PostgreSQL",
     "phase": "Faza",
     "phone": "Telefon",
