--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -79,7 +79,7 @@
     "all-variants": "Todas as variantes",
     "allow-delete": "Permitir excluir",
     "allow-delete-data": "Permitir DELETE",
-    "allow-export": "Permitir exportar",
+    "allow-export": "Permitir exportação",
     "allow-get-data": "Permitir GET",
     "allow-import": "Permitir a importação",
     "allow-marketing": "permitir-marketing",
@@ -303,7 +303,7 @@
     "continue": "Continuar",
     "contract": "contrato",
     "contracts": "contratos",
-    "control-panel": "Painel de controle",
+    "control-panel": "Painel de Controle",
     "control-panel-decimal-warning": "Aviso: esta mudança será aplicada aos preços dos produtos, mas também aos totais de faturas, lançamentos, etc.",
     "controller": "Controlador",
     "controller-error": "Erro de Controlador",
@@ -940,7 +940,7 @@
     "maximum-amount-without-cifnif": "Valor máximo sem CIF\/NIF",
     "maximum-stock": "Estoque máximo",
     "may": "Maio",
-    "media-whatsapp-not-upload": "Erro ao enviar o arquivo multimídia para o servidor do WhatsApp: %file%",
+    "media-whatsapp-not-upload": "Erro ao subir o arquivo multimídia para o servidor do WhatsApp: %file%",
     "mega-search": "MegaBuscador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache foi limpa.",
@@ -1122,6 +1122,7 @@
     "payment-method": "Forma de pagamento",
     "payment-methods": "Métodos de pagamento",
     "payments": "Pagamentos",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRS",
     "pct-surcharge": "% Acréscimo",
@@ -1619,7 +1620,7 @@
     "valid-for-day": "Válido por um dia",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
-    "validate-whatsapp-not-connection": "Erro ao validar o número do WhatsApp, não foi possível estabelecer conexão com o servidor do WhatsApp",
+    "validate-whatsapp-not-connection": "Erro ao validar o número do WhatsApp, não foi possível estabelecer a conexão com o servidor do WhatsApp.",
     "valuation-type": "Tipo de avaliação",
     "value": "Valor",
     "value-x": "Valor X",
