--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -79,7 +79,7 @@
     "all-variants": "Todas as variantes",
     "allow-delete": "Permitir apagar",
     "allow-delete-data": "Permitir ELIMINAR",
-    "allow-export": "Permitir exportar",
+    "allow-export": "Permitir exportação",
     "allow-get-data": "Permitir ACESSAR",
     "allow-import": "Permitir importar",
     "allow-marketing": "Permitir marketing",
@@ -911,7 +911,7 @@
     "logs": "Logs",
     "long": "Longo",
     "longitude": "Longitude",
-    "longitude-abb": "Long",
+    "longitude-abb": "Longitude",
     "look-for-gaps": "Procurar lacunas",
     "lot": "Muito",
     "low-security": "Baixa Segurança",
@@ -1122,6 +1122,7 @@
     "payment-method": "Método de pagamento",
     "payment-methods": "Métodos de Pagamento",
     "payments": "Pagamentos",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRS",
     "pct-surcharge": "% Acréscimo",
@@ -1619,7 +1620,7 @@
     "valid-for-day": "Válido por um dia",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
-    "validate-whatsapp-not-connection": "Erro ao validar o número do WhatsApp, não foi possível estabelecer conexão com o servidor do WhatsApp.",
+    "validate-whatsapp-not-connection": "Erro ao validar o número do WhatsApp, não foi possível estabelecer a conexão com o servidor do WhatsApp.",
     "valuation-type": "Tipo de avaliação",
     "value": "Valor",
     "value-x": "Valor X",
