--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1122,6 +1122,7 @@
     "payment-method": "Forma de pagament",
     "payment-methods": "Formes de pagament",
     "payments": "Pagaments",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% de recàrrec",
