--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1122,6 +1122,7 @@
     "payment-method": "Mètode de pagament",
     "payment-methods": "Mètodes de pagament",
     "payments": "Pagaments",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recàrrec",
