--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -1122,6 +1122,7 @@
     "payment-method": "Método de pago",
     "payment-methods": "Métodos de pago",
     "payments": "Pagos",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recargo",
