Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1350,7 +1350,7 @@
     "selected-quantity": "Hautatutako kantitatea",
     "selector-number": "Hautatzailea",
     "send": "Bidali",
-    "send-anonymous-data": "Bidali datu anonimoak",
+    "send-anonymous-data": "Datu anonimoak bidali",
     "send-audios": "Bidali audioak",
     "send-documents": "Bidali dokumentuak",
     "send-images": "Bidali irudiak",
