Actualizadas las traducciones.

--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -81,7 +81,7 @@
     "allow-delete-data": "Permitir ELIMINAR",
     "allow-export": "Permitir exportação",
     "allow-get-data": "Permitir ACESSAR",
-    "allow-import": "Permitir importar",
+    "allow-import": "Permitir a importação",
     "allow-marketing": "Permitir marketing",
     "allow-post-data": "Permitir MODIFICAR",
     "allow-put-data": "Permitir ADICIONAR",
