--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1562,7 +1562,7 @@
     "town": "Población",
     "tracking-code": "Código seguimiento",
     "transfer": "Transferencia",
-    "transfers": "Převody",
+    "transfers": "Převedení",
     "transfers-stock": "Transferencias de stock",
     "translation": "Traducción",
     "translations": "Traducciones",
