--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1339,7 +1339,7 @@
     "search-message": "Buscar mensagem",
     "search-product": "Buscar produto",
     "second-hand": "Segunda mão",
-    "second-quarter": "2º trimestre",
+    "second-quarter": "2.º trimestre",
     "second-trimester": "Segundo Trimestre",
     "select": "Selecionar",
     "select-all": "selecionar-todos",
