--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1090,7 +1090,7 @@
     "others-filters": "Outros filtros",
     "out-of-stock": "fora de stock",
     "page": "Página",
-    "page-break": "Salto de página",
+    "page-break": "Quebra de página",
     "page-configuration": "Página de Configuração",
     "page-not-found": "Página não encontrada",
     "page-not-found-p": "Não encontramos a página que procura.",
@@ -1339,7 +1339,7 @@
     "search-message": "Pesquisar mensagem",
     "search-product": "Procurar produto",
     "second-hand": "Em segunda mão",
-    "second-quarter": "2º trimestre",
+    "second-quarter": "2.º trimestre",
     "second-trimester": "Segundo Trimestre",
     "select": "Selecionar",
     "select-all": "selecionar-todos",
