--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1392,7 +1392,7 @@
     "short-name": "Nome curto",
     "show": "Mostrar",
     "show-balance-graphic": "Mostrar gráficos em lançamentos",
-    "show-crm-warnings": "Mostrar avisos CRM",
+    "show-crm-warnings": "Mostrar avisos de CRM",
     "show-expired-receipts": "Mostrar recibos expirados",
     "show-month-stats": "Mostrar estatísticas mensais",
     "show-pending-remittances": "Mostrar remessas pendentes",
