Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -212,6 +212,7 @@
     "card": "Tarjeta",
     "carrier": "Transportista",
     "carriers": "Transportistas",
+    "cart": "Carrito",
     "cash": "Efectivo",
     "categories": "Categorias",
     "category": "Categoría",
@@ -1156,7 +1157,7 @@
     "plugin-deleted": "Plugin %pluginName% ha sido eliminado correctamente.",
     "plugin-disabled": "El Plugin %pluginName% ha sido desactivado correctamente.",
     "plugin-enabled": "El Plugin %pluginName% ha sido activado correctamente.",
-    "plugin-file-too-big": "Tento server nepovoluje nahrávání souborů větších než %size% MB. Zvětšete prosím maximální velikost nahrávání souborů v PHP nebo zkopírujte soubor do složky Pluginy.",
+    "plugin-file-too-big": "Tento server nepovoluje nahrávání souborů větších než %size% MB. Zvětšete prosím maximální velikost nahrávání souborů v PHP nebo zkopírujte soubor do složky pluginy.",
     "plugin-installation-disabled": "La instalación de plugins está desactivada en este servidor",
     "plugin-installed": "Plugin '%pluginName%' instalado",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
