--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -212,6 +212,7 @@
     "card": "Karte",
     "carrier": "Träger",
     "carriers": "Träger",
+    "cart": "Warenkorb",
     "cash": "Bar",
     "categories": "Kategorien",
     "category": "Kategorie",
