--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -212,6 +212,7 @@
     "card": "Card",
     "carrier": "Carrier",
     "carriers": "Carriers",
+    "cart": "Cart",
     "cash": "Cash",
     "categories": "Categories",
     "category": "Category",
