--- a/Core/Translation/es_AR.json
+++ b/Core/Translation/es_AR.json
@@ -212,6 +212,7 @@
     "card": "Tarjeta",
     "carrier": "Logistica",
     "carriers": "Logistica",
+    "cart": "Carrito",
     "cash": "Efectivo",
     "categories": "Categorias",
     "category": "Categoría",
