--- a/Core/Translation/es_CL.json
+++ b/Core/Translation/es_CL.json
@@ -212,6 +212,7 @@
     "card": "Tarjeta",
     "carrier": "Transportista",
     "carriers": "Transportistas",
+    "cart": "Carrito",
     "cash": "Efectivo",
     "categories": "Categorias",
     "category": "Categoría",
