--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -212,6 +212,7 @@
     "card": "Txartela",
     "carrier": "Garraiolaria",
     "carriers": "Garraiolariak",
+    "cart": "Orga",
     "cash": "Eskudirua",
     "categories": "Kategoriak",
     "category": "Kategoria",
