--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -212,6 +212,7 @@
     "card": "Carte",
     "carrier": "Transporteur",
     "carriers": "Les transporteurs",
+    "cart": "Panier",
     "cash": "Effectifs",
     "categories": "Categories",
     "category": "Categoria",
