--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -212,6 +212,7 @@
     "card": "Tarxeta",
     "carrier": "Transportista",
     "carriers": "Transportistas",
+    "cart": "Carriño",
     "cash": "Efectivo",
     "categories": "Categorias",
     "category": "Categoría",
