--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -212,6 +212,7 @@
     "card": "Carta",
     "carrier": "Vettore",
     "carriers": "I vettori",
+    "cart": "Carrello",
     "cash": "Contanti",
     "categories": "Categorie",
     "category": "Categoria",
