--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -212,6 +212,7 @@
     "card": "Karta",
     "carrier": "Przewoźnik",
     "carriers": "Przewoźnicy",
+    "cart": "Koszyk",
     "cash": "Gotówka",
     "categories": "Kategorie",
     "category": "Kategoria",
