--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -89,7 +89,7 @@
     "allow-sale-without-stock-n": "Permitir venda sem estoque nos novos produtos",
     "allow-update": "Permitir MODIFICAR",
     "always-to-company-email": "Sempre para o e-mail da empresa",
-    "amount": "Montante",
+    "amount": "Valor",
     "amount-without-discount": "preço sem desconto",
     "and": "e",
     "any": "Qualquer",
@@ -212,6 +212,7 @@
     "card": "Cartão",
     "carrier": "Transportadora",
     "carriers": "Transportadoras",
+    "cart": "Carrinho",
     "cash": "Dinheiro",
     "categories": "Categorías",
     "category": "Categoria",
@@ -664,7 +665,7 @@
     "gap-found": "Intervalo encontrado para o número %numero%, dia %data%, %codserie% e empresa %idempresa%",
     "general": "Geral",
     "general-concepts": "Conceitos Gerais",
-    "general-data": "Dados gerais",
+    "general-data": "Dados Gerais",
     "generate": "Gerar",
     "generate-accounting-entries": "Gerar lançamentos contábeis",
     "generate-accounting-entry": "Gerar lançamento contábil",
