--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -212,6 +212,7 @@
     "card": "Targeta",
     "carrier": "Transportiste",
     "carriers": "Transportistes",
+    "cart": "Cistella",
     "cash": "Efectiu",
     "categories": "Categorias",
     "category": "Categoría",
