--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -212,6 +212,7 @@
     "card": "Targeta",
     "carrier": "Transportista",
     "carriers": "Transportistes",
+    "cart": "Cistella",
     "cash": "Efectiu",
     "categories": "Categories",
     "category": "Categoria",
