--- a/Core/Translation/es_CO.json
+++ b/Core/Translation/es_CO.json
@@ -212,6 +212,7 @@
     "card": "Tarjeta",
     "carrier": "Transportadora",
     "carriers": "Transportadoras",
+    "cart": "Carrito",
     "cash": "Efectivo",
     "categories": "Categorias",
     "category": "Categoría",
