--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -212,6 +212,7 @@
     "card": "Cartão",
     "carrier": "Transportadora",
     "carriers": "Transportadoras",
+    "cart": "Carrinho",
     "cash": "Dinheiro",
     "categories": "Categorías",
     "category": "Categoria",
