--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -504,7 +504,7 @@
     "email": "e-mail",
     "email-bcc": "Email Copia Conoscenza Nascosta",
     "email-cc": "Email Copia Conoscenza",
-    "email-not-configured": "Email non configurata",
+    "email-not-configured": "Email non configurato. Puoi configurare l'email dal menu amministratore, email.",
     "email-not-sent": "Non inviato",
     "email-notification": "Notifica via email",
     "email-notification-disabled": "La notifica email di %name% è disabilitata",
@@ -1529,7 +1529,7 @@
     "texts": "testi",
     "third-quarter": "3° trimestre",
     "third-trimester": "Terzo trimestre",
-    "this-last-fortnight": "Ultimi 15 giorni",
+    "this-last-fortnight": "Gli ultimi 15 giorni",
     "this-last-month": "Questo ultimo mese",
     "this-last-week": "Ultima settimana",
     "this-last-year": "Ultimo anno",
