--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -168,7 +168,7 @@
     "box-closed-ok": "Caixa fechada corretamente",
     "boxes": "Caixas",
     "browse": "Navegar",
-    "business-name": "Nome da empresa",
+    "business-name": "Razão Social",
     "buy": "Comprar",
     "cache": "Cache",
     "cache-dir": "Diretório de cache '%folderName%'",
