--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -154,7 +154,7 @@
     "banking-movements": "Banking movements",
     "barcode": "Barcode",
     "bcc": "BCC",
-    "become-sponsor": "Hazte patrocinador",
+    "become-sponsor": "Become a sponsor",
     "big": "Big",
     "billing": "Billing",
     "billing-address": "Billing address",
@@ -504,7 +504,7 @@
     "email": "E-mail",
     "email-bcc": "Email Blind Carbon Copy",
     "email-cc": "Email Carbon Copy",
-    "email-not-configured": "Email not configured. You can configure email from the administrator menu, control panel, application preferences.",
+    "email-not-configured": "Email not configured. You can configure the email from the administrator menu, email.",
     "email-not-sent": "Not sent",
     "email-notification": "Email notification",
     "email-notification-disabled": "The email notification %name% is disabled",
