--- a/Core/Translation/es_MX.json
+++ b/Core/Translation/es_MX.json
@@ -504,7 +504,7 @@
     "email": "Email",
     "email-bcc": "Email Con Copia Oculta",
     "email-cc": "Email Con Copia",
-    "email-not-configured": "Email no configurado. Puedes configurar el email desde el menú administrador, emals.",
+    "email-not-configured": "Email no configurado. Puedes configurar el email desde el menú administrador, email.",
     "email-not-sent": "No enviado",
     "email-notification": "Notificación por email",
     "email-notification-disabled": "La notificación de email %name% está desactivada",
