--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -504,7 +504,7 @@
     "email": "Correu electrònic",
     "email-bcc": "Email en Còpia Oculta",
     "email-cc": "Email en còpia",
-    "email-not-configured": "El correu electrònic no està configurat",
+    "email-not-configured": "El correu electrònic no està configurat. Podeu configurar el correu electrònic des del menú administrador, correu electrònic.",
     "email-not-sent": "No s'ha enviat",
     "email-notification": "Notificació per correu electrònic",
     "email-notification-disabled": "La notificació de correu electrònic %name% està desactivada",
