Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -941,7 +941,7 @@
     "maximum-amount-without-cifnif": "Gehieneko zenbatekoa IFK\/IFZ gabe",
     "maximum-stock": "Stock maximoa",
     "may": "Maiatza",
-    "media-whatsapp-not-upload": "Errorea multimedia fitxategia WhatsApp zerbitzarian igoan: %file%",
+    "media-whatsapp-not-upload": "Errorea multimedia fitxategia WhatsApp zerbitzari gunean igoan: %file%",
     "mega-search": "MegaBilaketa",
     "memcache": "Memcache",
     "memcache-clear": "Memcache garbituta.",
