Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -526,7 +526,7 @@
     "enable-api": "Activar API",
     "enable-updates-beta": "Activar actualizaciones beta",
     "enabled": "Activo",
-    "enabled-plugins": "Aktivované pluginy",
+    "enabled-plugins": "Aktivní pluginy",
     "encrypt": "Encriptación",
     "end-date": "Fecha de fin",
     "end-time": "Hora finalización",
