Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -645,7 +645,7 @@
     "for-admins": "P",
     "for-all": "Para todos",
     "for-all-exercises": "Para todos os exercícios",
-    "for-purchase": "Para compra",
+    "for-purchase": "Se compra",
     "for-sale": "À venda",
     "foresee": "Prever",
     "format": "Formato",
