Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -717,7 +717,7 @@
     "grouping-type": "Agrupación",
     "groups": "Grupos",
     "has-attachments": "Má přílohy",
-    "has-parent": "Má rodiče",
+    "has-parent": "Má rodiče.",
     "hash": "Hash",
     "header": "Hlavička",
     "heading-account-group-id": "ID grupo epígrafes",
@@ -1173,7 +1173,7 @@
     "plugins": "Plugins",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
     "points": "Puntos",
-    "points-of-interest": "Body zájmu",
+    "points-of-interest": "Body zájmu.",
     "port": "Puerto",
     "position": "Cargo",
     "positive-balance": "Saldo positivo",
@@ -1517,7 +1517,7 @@
     "tax-transport": "Impuestos del transporte",
     "taxes": "Impuestos",
     "telemetry-data-to-send": "Las instalaciones registradas notifican periódicamente la versión de FacturaScripts, PHP, país, idioma y listado de plugins.",
-    "telephone-prefix": "Telefonní předpona",
+    "telephone-prefix": "Telefonní předpona.",
     "template": "Plantilla",
     "template-error": "Error en la plantilla",
     "template-not-found": "Plantilla no encontrada",
