--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -425,7 +425,7 @@
     "delivery-note": "Nota de entrega",
     "delivery-note-email-subject": "A sua nota de entrega %code%",
     "delivery-note-email-text": "Olá, vai anexo a sua Nota de Entrega %code%",
-    "delivery-notes": "Notas de entrega",
+    "delivery-notes": "Notas fiscais",
     "delivery-notes-button": "Notas de Entrega pendentes:",
     "department": "d",
     "departments": "departamentos",
