Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -569,10 +569,10 @@
     "es-tax-regime-telecom": "Regimes especiais aplicáveis aos serviços de telecomunicações, de radiodifusão ou de televisão e aos prestados por via eletrônica",
     "es-tax-regime-travel": "Regime especial das agências de viagens",
     "es-tax-regime-used-goods": "Regime especial de bens usados, obras de arte, antiguidades e objetos de coleção",
-    "estimation": "Estimativa",
+    "estimation": "Orçamento",
     "estimation-email-subject": "O seu orçamento %code%",
     "estimation-email-text": "Olá, segue em anexo o orçamento %code%",
-    "estimations": "Estimativas",
+    "estimations": "Orçamentos",
     "event": "Evento",
     "events": "Eventos",
     "exceptions": "Exceções",
