--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -330,7 +330,7 @@
     "create": "Criar",
     "create-accounting-entry": "Criar lançamento contábil",
     "create-delivery-note": "Criar albaran",
-    "create-estimation": "Criar estimativa",
+    "create-estimation": "Criar orçamento",
     "create-invoice": "Criar fatura",
     "create-new-record": "Criar novo registro",
     "created": "Criado",
@@ -353,8 +353,8 @@
     "customer-commission-info": "Sólo se aplicará quando a venda for ao cliente selecionado",
     "customer-delivery-note": "Nota de Entrega de Cliente",
     "customer-delivery-notes": "Notas de Entrega de Clientes",
-    "customer-estimation": "Estimativa de Cliente",
-    "customer-estimations": "Estimativas de Cliente",
+    "customer-estimation": "Orçamento do Cliente",
+    "customer-estimations": "Orçamentos do Cliente",
     "customer-group": "Grupo de clientes",
     "customer-groups": "Grupos de clientes",
     "customer-invoice": "Fatura de Cliente",
@@ -493,7 +493,7 @@
     "download-xml": "Baixar XML",
     "downloads": "descargas",
     "drag": "Arrastar",
-    "dto": "Disco.",
+    "dto": "DESC.",
     "dto-2": "Dto. 2",
     "duplicate-record": "Registro duplicado",
     "duplicated-reference": "Referência '%reference%' duplicada",
@@ -569,10 +569,10 @@
     "es-tax-regime-telecom": "R",
     "es-tax-regime-travel": "Regime especial das agências de viagens",
     "es-tax-regime-used-goods": "Regime especial para bens usados, objetos de arte, antiguidades e objetos de coleção",
-    "estimation": "Estimativa",
+    "estimation": "Orçamento",
     "estimation-email-subject": "O seu orçamento %code%",
     "estimation-email-text": "Olá, segue em anexo o orçamento %code%",
-    "estimations": "Estimativas",
+    "estimations": "Orçamentos",
     "event": "Evento",
     "events": "Eventos",
     "exceptions": "Exceções",
@@ -590,7 +590,7 @@
     "expedient": "Expediente",
     "expense-subaccount": "Subconta para despesas bancárias",
     "expenses": "Despesas",
-    "expiration": "Expiração",
+    "expiration": "Vencimento",
     "expiration-type": "Tipo de vencimento",
     "expired": "Expirado",
     "expired-receipt": "R",
@@ -681,7 +681,7 @@
     "generated-at": "Gerado em %when%",
     "generated-contacts": "%quantity% contatos gerados.",
     "generated-customer-delivery-notes": "0 notas de entrega de clientes geradas.",
-    "generated-customer-estimations": "0 estimativas de clientes geradas.",
+    "generated-customer-estimations": "0 orçamentos de clientes geradas.",
     "generated-customer-groups": "0 grupos de clientes gerados.",
     "generated-customer-orders": "0 ordens de clientes geradas.",
     "generated-customers": "0 clientes gerados.",
@@ -692,7 +692,7 @@
     "generated-subaccounts": "0 sub-contas geradas.",
     "generated-supplier": "0 fornecedor gerado.",
     "generated-supplier-delivery-notes": "0 notas de entrega do fornecedor geradas.",
-    "generated-supplier-estimations": "%quantity% estimativas de fornecedor geradas.",
+    "generated-supplier-estimations": "%quantity% orçamentos de fornecedor geradas.",
     "generated-supplier-orders": "0 pedidos de fornecedores gerados.",
     "global-dto": "Dto. global",
     "global-dto-2": "Desconto global 2",
@@ -1133,7 +1133,7 @@
     "pending-invoices-button": "Faturas Pendentes:",
     "pending-orders-button": "Ordens Ptes:",
     "pending-reception": "Recepção pendente",
-    "percentage": "Percentagem",
+    "percentage": "Porcentagem",
     "percentage-commission": "% Comissão",
     "percentage-discount": "p",
     "percentage-surcharge": "% Taxa",
@@ -1232,7 +1232,7 @@
     "pvptotal-line-error": "Erro no valor pvptotal da linha 0 do documento. Valor correto: 1",
     "quantities": "Quantidades",
     "quantity": "Quantidade",
-    "quantity-abb": "Quantidade-abrev",
+    "quantity-abb": "QTD.",
     "quantity-remaining": "Quantidade restante",
     "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
@@ -1477,8 +1477,8 @@
     "supplier-code": "Cód. Fornecedor",
     "supplier-delivery-note": "Nota de Entrega de Fornecedor",
     "supplier-delivery-notes": "Notas de Entrega de Fornecedores",
-    "supplier-estimation": "Estimativa de Fornecedor",
-    "supplier-estimations": "Estimativas de Fornecedor",
+    "supplier-estimation": "Orçamento do Fornecedor",
+    "supplier-estimations": "Orçamentos do Fornecedor",
     "supplier-have-no-iban": "O fornecedor %%supplier não tem IBAN (conta bancária)",
     "supplier-invoice": "Fatura de Fornecedor",
     "supplier-invoice-deleted-successfully": "Comprar fatura 0 excluída com sucesso.",
