Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -910,7 +910,7 @@
     "logout": "Sair",
     "logout-ok": "Sessão encerrada com sucesso.",
     "logs": "Logs",
-    "long": "Longo",
+    "long": "Comprido",
     "longitude": "Longitude",
     "longitude-abb": "Longitude",
     "look-for-gaps": "Buscar lacunas",
@@ -1271,7 +1271,7 @@
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
     "register": "Registar",
-    "register-install-ad": "Registre a instalação do FacturaScripts",
+    "register-install-ad": "Registra a instalação do FacturaScripts",
     "register-install-ad-p": "Se você registrar a instalação do FacturaScripts, obterá 1 mês de patrocínio PRO, que permite baixar um dos nossos plugins exclusivos. Além disso, nos ajuda a obter estatísticas das versões do núcleo e do PHP.",
     "register-installation": "Registrar instalação",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
