Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1272,7 +1272,7 @@
     "refunds": "Zwróty",
     "register": "Zarejestruj",
     "register-install-ad": "Zarejestruj instalację FacturaScripts",
-    "register-install-ad-p": "Jeśli zarejestrujesz instalację FacturaScripts, otrzymasz 1 miesiąc sponsoringu PRO, który pozwala pobrać jedną z naszych ekskluzywnych wtyczek. Pomaga nam również uzyskać statystyki dotyczące wersji rdzenia i PHP.",
+    "register-install-ad-p": "Jeśli zarejestrujesz instalację FacturaScripts, otrzymasz 1 miesiąc sponsoringu PRO, który pozwala na pobranie jednego z naszych ekskluzywnych wtyczek. Pomaga nam również uzyskać statystyki dotyczące wersji rdzenia i PHP.",
     "register-installation": "Zarejestruj instalację",
     "register-installation-p": "Zarejestruj swoją instalację, aby móc aktualizować płatne lub prywatne wtyczki.",
     "register-symbol": "#",
