Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -530,9 +530,9 @@
     "encrypt": "Criptografia",
     "end-date": "Data Final",
     "end-time": "hora-final",
-    "epigraph": "Epígrafe",
+    "epigraph": "Título",
     "epigraph-group": "Grupo de Epígrafe",
-    "epigraphs": "Epígrafes",
+    "epigraphs": "Títulos",
     "epigraphs-group": "Grupo de Epígrafes",
     "equivalence": "Equivalência",
     "equivalent-account-not-found": "Não foi possível encontrar uma conta equivalente a %accountCode% no exercício %exerciseCode%. Você importou o plano de contas?",
@@ -1272,7 +1272,7 @@
     "refunds": "Reembolsos",
     "register": "Registar",
     "register-install-ad": "Registra a instalação do FacturaScripts",
-    "register-install-ad-p": "Se você registrar a instalação do FacturaScripts, obterá 1 mês de patrocínio PRO, que permite baixar um dos nossos plugins exclusivos. Além disso, nos ajuda a obter estatísticas das versões do núcleo e do PHP.",
+    "register-install-ad-p": "Se registar a instalação do FacturaScripts, obterá 1 mês de patrocínio PRO, que lhe permite baixar um dos nossos plugins exclusivos. Além disso, ajuda-nos a obter estatísticas das versões do núcleo e do PHP.",
     "register-installation": "Registrar instalação",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
