--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1272,7 +1272,7 @@
     "refunds": "Reembolsos",
     "register": "Registar",
     "register-install-ad": "Registar a instalação do FacturaScripts",
-    "register-install-ad-p": "Se registrar a instalação do FacturaScripts, obterá 1 mês de patrocínio PRO, que lhe permite baixar um dos nossos plugins exclusivos. Além disso, ajuda-nos a obter estatísticas das versões do core e do PHP.",
+    "register-install-ad-p": "Se registar a instalação do FacturaScripts, obterá 1 mês de patrocínio PRO, que lhe permite baixar um dos nossos plugins exclusivos. Além disso, ajuda-nos a obter estatísticas das versões do núcleo e do PHP.",
     "register-installation": "Registrar instalação",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
